--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,11 @@
     <string name="main_input_name_text_desc">Title</string>
     <string name="main_button_test_text">Test</string>
     <string name="Main_button_launch_text">Launch</string>
+    <string name="ItemDescriptionText">TextView</string>
+    <string name="item_title_text">TextView</string>
+    <string name="card_title_text">Title</string>
+    <string name="card_from_text">From</string>
+    <string name="card_text_text">text texte</string>
+    <string name="card_name_text">Name</string>
+    <string name="main_fragment_input_text_desc">text</string>
 </resources>
